--- a/style.css
+++ b/style.css
@@ -7,3 +7,35 @@ main{
 
 }
 
+body{
+    background-image: url("images/bg-intro-desktop.png");
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1{
+    font-size: xx-large;
+}
+
+#quadro{
+    color: white;
+    background-image: url("images/bg-intro-desktop.png");
+    background-color: #b96363;
+    width: 500px;
+    height: 500px;
+    position: absolute; /*deixa a DIV solta*/
+    top: 20%;
+    left: 10%;
+}
+
+#info{
+    background-color: blue;
+}
+
+#submit{
+    background-color: greenyellow;
+}
+
+footer{
+    position: absolute; /*deixa a DIV solta*/
+    bottom: 0%;
+}
