--- a/style.css
+++ b/style.css
@@ -14,28 +14,82 @@ body{
 
 h1{
     font-size: xx-large;
+    text-align: left;
 }
 
 #quadro{
     color: white;
     background-image: url("images/bg-intro-desktop.png");
-    background-color: #b96363;
-    width: 500px;
-    height: 500px;
+    background-color: hsl(0, 100%, 74%);
+    width: 90%;
+    height: 80%;
     position: absolute; /*deixa a DIV solta*/
-    top: 20%;
-    left: 10%;
+    top: 10%;
+    left: 5%;
+}
+
+#A{
+    float: left;
+    width: 50%;
+}
+
+#B{
+    float: left;
+    width: 50%;
+}
+
+#conteudo{
+    position: relative;
+    padding: 25%;
+    
+}
+
+#text1{
+    text-align: left;
+}
+
+.dupla{
+    border-radius: 5px;
+    padding: 8px;
+    margin-right: 25%;
+    box-shadow: 0px 7px rgba(0, 0, 0, 0.2);
+
 }
 
 #info{
-    background-color: blue;
+    background-color: hsl(248, 32%, 49%);
+    margin-top: 50px;
+    margin-bottom: 20px;
+
+}
+
+#dados{
+    background-color: white;
+    padding-top: 35px;
+    padding-bottom: 35px;
+
+}
+
+.campo{
+    border: thin solid #ccc;
+    border-radius: 5px;
+    width: 80%;
+    padding: 8px;
+    margin: 5px;
 }
 
 #submit{
-    background-color: greenyellow;
+    background-color: hsl(154, 59%, 51%);
+    color: white;
+}
+
+#termos{
+    color: black;
 }
 
 footer{
     position: absolute; /*deixa a DIV solta*/
     bottom: 0%;
+    text-align: center;
+    margin-left: 35%;
 }
