--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
+@font-face {
+    font-family: 'pop';
+    src: url('font/Poppins-Medium.ttf') format("truetype");
+}
+
 main{
     font-size: 11px;
     text-align: center;
@@ -9,7 +14,7 @@ main{
 
 body{
     background-image: url("images/bg-intro-desktop.png");
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'pop';
 }
 
 h1{
@@ -71,6 +76,7 @@ h1{
 }
 
 .campo{
+    color: gray;
     border: thin solid #ccc;
     border-radius: 5px;
     width: 80%;
@@ -81,10 +87,15 @@ h1{
 #submit{
     background-color: hsl(154, 59%, 51%);
     color: white;
+    font-weight: 700;
 }
 
 #termos{
-    color: black;
+    color: #ccc;
+}
+
+#span{
+    color: hsl(0, 100%, 74%);
 }
 
 footer{
