--- a/style.css
+++ b/style.css
@@ -81,7 +81,20 @@ h1{
     border-radius: 5px;
     width: 80%;
     padding: 8px;
-    margin: 5px;
+    margin-top: 5px;
+}
+
+.campo:hover{
+    background-color: #ccc!important;
+}
+
+.msg{
+    color: hsl(0, 100%, 74%);
+    padding-right: 0;
+    font-size: smaller;
+    padding: 0;
+    margin: 0;
+    display: none;
 }
 
 #submit{
