--- a/style.css
+++ b/style.css
@@ -88,6 +88,10 @@ h1{
     background-color: #ccc!important;
 }
 
+.classe::placeholder {
+    color: hsl(0, 100%, 74%);
+ }
+
 .msg{
     color: hsl(0, 100%, 74%);
     padding-right: 0;
@@ -115,5 +119,5 @@ footer{
     position: absolute; /*deixa a DIV solta*/
     bottom: 0%;
     text-align: center;
-    margin-left: 35%;
+    margin-left: 45%;
 }
