--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ main{
 }
 
 body{
-    background-image: url("images/bg-intro-desktop.png");
+    background-image: url("imagens/bg-intro-desktop.png");
     font-family: 'pop';
 }
 
@@ -24,7 +24,7 @@ h1{
 
 #quadro{
     color: white;
-    background-image: url("images/bg-intro-desktop.png");
+    background-image: url("imagens/bg-intro-desktop.png");
     background-color: hsl(0, 100%, 74%);
     width: 90%;
     height: 80%;
@@ -80,13 +80,22 @@ h1{
     border: thin solid #ccc;
     border-radius: 5px;
     width: 80%;
-    padding: 8px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 20px;
+    padding-right: 20px;
     margin-top: 5px;
+    /*background-image: url("imagens/icon-error.svg");*/
+    background-repeat: no-repeat;
+    background-size: 1.3em;
+    background-position-x: 95%;
+    background-position-y: 50%;
 }
 
 .campo:hover{
     background-color: #ccc!important;
 }
+
 
 .classe::placeholder {
     color: hsl(0, 100%, 74%);
@@ -105,6 +114,7 @@ h1{
     background-color: hsl(154, 59%, 51%);
     color: white;
     font-weight: 700;
+    background-image: none;
 }
 
 #termos{
