--- a/inside/casamento.css
+++ b/inside/casamento.css
@@ -16,13 +16,13 @@ header{
     width: 100vw;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     padding: 15px 0 15px 0;
-    background-color: #E9E8EB;
+    background-color: #FEF5E7;
     width: 100%;
 }
 
 main{
     width: 100%;
-    background-color: #E9E8EB;
+    background-color: #FEF5E7
 }
 
 footer{
@@ -42,6 +42,7 @@ h1{
 h3{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: 10px;
+    color: #9F0000;
 }
 
 h4{
@@ -59,6 +60,7 @@ a{
     width: 80%;
     border: solid white 10px;
     margin-top: 10px;
+    box-shadow: 5px 5px 5px;
 }
 
 #lista{
@@ -75,6 +77,7 @@ a{
     width: 80%;
     text-align: justify;
     margin-bottom: 20px;
+    font-size: 1em;
 }
 
 .flex{
