--- a/inside/casamento.css
+++ b/inside/casamento.css
@@ -77,6 +77,7 @@ a{
     width: 80%;
     text-align: justify;
     margin-bottom: 20px;
+    font-size: 16px;
 }
 
 .flex{
@@ -185,9 +186,9 @@ span.turn{
 	0%{transform: rotateX(0deg)}
 	100%{transform: rotateX(360deg)}
 }
-
+/*
 @media (max-width: 650px) {
     #texto{
         font-size: 3.3vw;
     }
-}
+}*/
