--- a/inside/casamento.css
+++ b/inside/casamento.css
@@ -26,12 +26,21 @@ main{
 }
 
 footer{
-    background-color: white;
-    color: goldenrod;
+    background-color:rgb(219, 185, 99); 
     width: 100%;
     flex-direction: row !important;
     justify-content: space-around !important;
     padding: 30px 0 30px 0;
+}
+
+button{
+    background-color: white;
+    color: #9F0000;
+    border: solid 1px rgb(108, 101, 101);
+    border-radius: 5px;
+    box-shadow: 5px 5px 5px;
+    padding: 5px;
+    cursor: pointer;
 }
 
 h1{
@@ -127,11 +136,6 @@ a{
     font-size: 20px;
     display: flex;
     justify-content: space-around;
-}
-
-
-.colNumero{
-    
 }
 
 .numero{
