--- a/inside/casamento.css
+++ b/inside/casamento.css
@@ -28,7 +28,6 @@ main{
 footer{
     background-color:rgb(219, 185, 99); 
     width: 100%;
-    flex-direction: row !important;
     justify-content: space-around !important;
     padding: 30px 0 30px 0;
 }
@@ -41,6 +40,7 @@ button{
     box-shadow: 5px 5px 5px;
     padding: 5px;
     cursor: pointer;
+    width: 30%;
 }
 
 h1{
@@ -93,6 +93,20 @@ a{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+.fotoP{
+    margin-bottom: 5px;
+    width: 80%;
+    border: solid white 10px;
+    margin-top: 10px;
+    box-shadow: 5px 5px 5px;
+}
+
+#previa{
+    width: 100%;
+    display: none;
+    align-items: center;
+    flex-direction: column;
 }
 
 #historia{
